2022-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobString): Use fgets() in order to get much
	better performance.

2022-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Improve read performance by using
	integer keys.  Trace the colormap.

2022-10-29  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/xpm.c (ReadXPMImage): Replace strcmp with faster memcmp.
        It improves 21% performance on my test image.

2022-10-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Eliminate unnecessary strlen() upon
	memory reallocation for better performance.

2022-10-29  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_bilevel.xpm
	* PerlMagick/t/reference/read/input_xpm_bilevel.miff New testcase
        with bilevel monochrome image.
	* PerlMagick/t/read.t: Added input_xpm_pal16.miff to PerlMagick test
	suite.

2022-10-28  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_pal16.xpm
	* PerlMagick/t/reference/read/input_xpm_pal16.miff New testcase
        with 16 bit palette.
	* PerlMagick/t/read.t: Added input_xpm_pal16.miff to PerlMagick test
	suite.

2022-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

2022-10-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Remove "optimisation" that has negligible or negative
        effect to overall performance.

2022-10-19  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Cleanup GCC compile warnings.

2022-10-17  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Do not consider whole image to be invalid when a second
        chunk header contains invalid data.

2022-10-16  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Renamed image attribute "comment" from extended area to
        "TGA:file.comment" to prevent mix of these 2 comments.
        (Now TGA can produce both "comment" and "TGA:file.comment").
