@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020221030"
-#define public MagickPackageReleaseDate "snapshot-20221030"
+#define public MagickPackageVersionAddendum ".020221031"
+#define public MagickPackageReleaseDate "snapshot-20221031"
