@@ -37,6 +37,15 @@
 </div>
 
 <div class="document">
+<p>2022-10-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>magick/blob.c (ReadBlobString): Fix oss-fuzz issue 52917
+&quot;graphicsmagick:coder_TXT_fuzzer: Stack-buffer-overflow in
+ReadBlobString&quot;, which occurs due to a bug added in yesterday's
+ReadBlobString() changes.</p></li>
+</ul>
+</blockquote>
 <p>2022-10-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
